--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  background: radial-gradient(53.9% 53.9% at 77.01% 30.21%, rgba(31, 195, 231, 0.84375) 0%, #1F34E7 100%);
+  width: 1300px;
+  margin-left: 10%;
 
 }
 
@@ -40,5 +41,67 @@
 
 .service-img {
   width: 18%;
+  padding: 20px 0 20px 0;
+}
+
+.services-bg {
+  background: rgba(62, 60, 60, 0.9);
+  opacity: 0.4;
+}
+.service-bg {
+  background-color: gray;
+  border-radius: 20px;
+  padding: 20px;
+  width:200px;
+  cursor: pointer;
+}
+
+.service-bg:hover {
+  transform: scale(1.1);
+  transition: .4s all ease-out;
+}
+
+.hero-img {
+  width: 1100px;
+  height: 448px
+}
+
+.eclipse-1 {
+  position: absolute;
+  top: 250px;
+  left: 45%;
+}
+.eclipse-2 {
+  position: absolute;
+  top: 100px;
+  left: 40%;
+}
+.eclipse-3 {
+  position: absolute;
+  top: 180px;
+  left: 50%;
+}
+.eclipse-4 {
+  position: absolute;
+  top: 180px;
+  left: 69%;
+}
+.eclipse-5 {
+  position: absolute;
+  top: 140px;
+  left: 81%;
+  width: 20%;
+}
+.eclipse-6 {
+  position: absolute;
+  top: 80%;
+  left: -3%;
+  width: 16%;
+}
+.eclipse-7 {
+  position: absolute;
+  top: 10%;
+  left: 0;
+  width: 12%;
 }
 
