--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@
   position: absolute;
   top: 140px;
   left: 81%;
-  width: 20%;
+  width: 18%;
 }
 .eclipse-6 {
   position: absolute;
@@ -103,5 +103,73 @@
   top: 10%;
   left: 0;
   width: 12%;
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    width: 150%;
+    height: auto;
+    margin: 0;
+  }
+  .service-bg {
+    background-color: gray;
+    border-radius: 20px;
+    padding: 20px 10px;
+    width:90%;
+    cursor: pointer;
+    margin: 15px 0 6px 15px;
+  }
+  .service-img {
+    width: 16%;
+    padding: 16px 0;
+  }
+
+  .hero-img {
+    width: 1100px;
+    height: 448px
+  }
+
+  .eclipse-1 {
+    position: absolute;
+    top: 250px;
+    left: 45%;
+  }
+  .eclipse-2 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+  }
+  .eclipse-3 {
+    position: absolute;
+    top: 180px;
+    left: 50%;
+    display: none;
+  }
+  .eclipse-4 {
+    position: absolute;
+    top: 180px;
+    left: 69%;
+    display: none;
+  }
+  .eclipse-5 {
+    position: absolute;
+    top: 140px;
+    left: 81%;
+    width: 18%;
+  }
+  .eclipse-6 {
+    position: absolute;
+    top: 80%;
+    left: -3%;
+    width: 16%;
+    display: none;
+  }
+  .eclipse-7 {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 12%;
+    display: none;
+  }
 }
 
